--- a/App/App.fsproj
+++ b/App/App.fsproj
@@ -76,12 +76,10 @@
     <Compile Include="WinForms\WinFormsControlUtils.fs" />
     <Compile Include="WinForms\WinFormsConverters.fs" />
     <Compile Include="WinForms\WinFormsUtils.fs" />
-    <Compile Include="WinForms\ChartUtils.fs" />
     <Compile Include="WinForms\Components\PopupDialog.fs" />
     <Compile Include="WinForms\Components\TopDialog.fs" />
     <Compile Include="WinForms\Components\TriStateCheckTreeView.fs" />
     <Compile Include="WinForms\Components\LeftInfoBlock.fs" />
-    <Compile Include="WinForms\Components\ChartAxisScalingViewModel.fs" />
     <Compile Include="Json\Json.fs" />
     <Compile Include="Json\JsonSerialization.fs" />
     <Compile Include="Json\JsonConfig.fs" />
@@ -96,8 +94,6 @@
     <Compile Include="AppCore\Mdbs.fs" />
     <Compile Include="AppCore\Hardware.fs" />
     <Compile Include="AppCore\Repository.fs" />
-    <Compile Include="AppCore\PhysVarValues.fs" />
-    <Compile Include="AppCore\Chart.fs" />
     <Compile Include="AppCore\Alchemy.fs" />
     <Compile Include="ViewModels\ViewModel.fs" />
     <Compile Include="ViewModels\ProductViewModel1.fs" />
@@ -117,7 +113,6 @@
     <Compile Include="View\ViewScenary.fs" />
     <Compile Include="View\Thread2Views.fs" />
     <Compile Include="View\ReportView.fs" />
-    <Compile Include="View\ViewChart.fs" />
     <Compile Include="View\OpenPartyDialog.fs" />
     <Compile Include="View\SelectScenaryDialog.fs" />
     <Compile Include="View\PartyProductsDialogs.fs" />
@@ -185,8 +180,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
+    <Reference Include="FSharp.Core">
+      <Name>FSharp.Core</Name>
+      <AssemblyName>FSharp.Core.dll</AssemblyName>
+      <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\FSharp\.NETFramework\v4.0\$(TargetFSharpCoreVersion)\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
