--- a/App/App.fsproj
+++ b/App/App.fsproj
@@ -145,6 +145,8 @@
     <Content Include="icon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Script1.fsx" />
+    <None Include="Script2.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
